--- a/kerykeion/settings/kr.config.json
+++ b/kerykeion/settings/kr.config.json
@@ -43,6 +43,30 @@
       "waning_gibbous": "Waning Gibbous",
       "last_quarter": "Last Quarter",
       "waning_crescent": "Waning Crescent",
+      "houses": "Houses",
+      "houses_system_A": "Equal",
+      "houses_system_B": "Alcabitius",
+      "houses_system_C": "Campanus",
+      "houses_system_D": "Equal (MC)",
+      "houses_system_F": "Carter poli-equ.",
+      "houses_system_H": "Horizon/Azimut",
+      "houses_system_I": "Sunshine",
+      "houses_system_i": "Sunshine/alt.",
+      "houses_system_K": "Koch",
+      "houses_system_L": "Pullen SD",
+      "houses_system_M": "Morinus",
+      "houses_system_N": "Equal/1=Aries",
+      "houses_system_O": "Porphyry",
+      "houses_system_P": "Placidus",
+      "houses_system_Q": "Pullen SR",
+      "houses_system_R": "Regiomontanus",
+      "houses_system_S": "Sripati",
+      "houses_system_T": "Polich/Page",
+      "houses_system_U": "Krusinski-Pisa-Goelzer",
+      "houses_system_V": "Equal/Vehlow",
+      "houses_system_W": "Equal/Whole sign",
+      "houses_system_X": "Axial rotation system/Meridian houses",
+      "houses_system_Y": "APC houses",
       "celestial_points": {
         "Sun": "Sun",
         "Moon": "Moon",
@@ -109,6 +133,30 @@
       "waning_gibbous": "Lune Gibbeuse Décroissante",
       "last_quarter": "Dernier Quartier",
       "waning_crescent": "Dernier Croissant",
+      "houses": "Maisons",
+      "houses_system_A": "Égales",
+      "houses_system_B": "Alcabitius",
+      "houses_system_C": "Campanus",
+      "houses_system_D": "Égales (MC)",
+      "houses_system_F": "Carter poli-equ.",
+      "houses_system_H": "Horizon/Azimut",
+      "houses_system_I": "Sunshine",
+      "houses_system_i": "Sunshine/alt.",
+      "houses_system_K": "Koch",
+      "houses_system_L": "Pullen SD",
+      "houses_system_M": "Morinus",
+      "houses_system_N": "Égales/1=Bélier",
+      "houses_system_O": "Porphyre",
+      "houses_system_P": "Placidus",
+      "houses_system_Q": "Pullen SR",
+      "houses_system_R": "Regiomontanus",
+      "houses_system_S": "Sripati",
+      "houses_system_T": "Polich/Page",
+      "houses_system_U": "Krusinski-Pisa-Goelzer",
+      "houses_system_V": "Égales/Vehlow",
+      "houses_system_W": "Égales/Signe entier",
+      "houses_system_X": "Système de rotation axiale/Maisons méridiennes",
+      "houses_system_Y": "Maisons APC",
       "celestial_points": {
         "Sun": "Soleil",
         "Moon": "Lune",
@@ -175,6 +223,30 @@
       "waning_gibbous": "Lua Gibosa Minguante",
       "last_quarter": "Quarto Minguante",
       "waning_crescent": "Lua Minguante",
+      "houses": "Casas",
+      "houses_system_A": "Igual",
+      "houses_system_B": "Alcabítio",
+      "houses_system_C": "Campanus",
+      "houses_system_D": "Igual (MC)",
+      "houses_system_F": "Carter poli-equ.",
+      "houses_system_H": "Horizonte/Azimute",
+      "houses_system_I": "Sunshine",
+      "houses_system_i": "Sunshine/alt.",
+      "houses_system_K": "Koch",
+      "houses_system_L": "Pullen SD",
+      "houses_system_M": "Morinus",
+      "houses_system_N": "Igual/1=Áries",
+      "houses_system_O": "Porfírio",
+      "houses_system_P": "Placidus",
+      "houses_system_Q": "Pullen SR",
+      "houses_system_R": "Regiomontanus",
+      "houses_system_S": "Sripati",
+      "houses_system_T": "Polich/Page",
+      "houses_system_U": "Krusinski-Pisa-Goelzer",
+      "houses_system_V": "Igual/Vehlow",
+      "houses_system_W": "Igual/Signo inteiro",
+      "houses_system_X": "Sistema de rotação axial/Casas meridianas",
+      "houses_system_Y": "Casas APC",
       "celestial_points": {
         "Sun": "Sol",
         "Moon": "Lua",
@@ -241,6 +313,30 @@
       "waning_gibbous": "Gibbosa Calante",
       "last_quarter": "Ultimo Quarto",
       "waning_crescent": "Luna Calante",
+      "houses": "Domificazione",
+      "houses_system_A": "Uguale",
+      "houses_system_B": "Alcabizio",
+      "houses_system_C": "Campano",
+      "houses_system_D": "Uguale (MC)",
+      "houses_system_F": "Carter poli-equ.",
+      "houses_system_H": "Orizzonte/Azimut",
+      "houses_system_I": "Sunshine",
+      "houses_system_i": "Sunshine/alt.",
+      "houses_system_K": "Koch",
+      "houses_system_L": "Pullen SD",
+      "houses_system_M": "Morinus",
+      "houses_system_N": "Uguale/1=Ariete",
+      "houses_system_O": "Porfirio",
+      "houses_system_P": "Placido",
+      "houses_system_Q": "Pullen SR",
+      "houses_system_R": "Regiomontano",
+      "houses_system_S": "Sripati",
+      "houses_system_T": "Polich/Page",
+      "houses_system_U": "Krusinski-Pisa-Goelzer",
+      "houses_system_V": "Uguale/Vehlow",
+      "houses_system_W": "Uguale/Segno intero",
+      "houses_system_X": "Sistema di rotazione assiale/Case meridiane",
+      "houses_system_Y": "Case APC",
       "celestial_points": {
         "Sun": "Sole",
         "Moon": "Luna",
@@ -307,6 +403,30 @@
       "waning_gibbous": "虧凸月",
       "last_quarter": "下弦月",
       "waning_crescent": "殘月",
+      "houses": "宮位系統",
+      "houses_system_A": "等宮",
+      "houses_system_B": "阿卡比提烏斯",
+      "houses_system_C": "坎帕努斯",
+      "houses_system_D": "等宮 (MC)",
+      "houses_system_F": "卡特極-等",
+      "houses_system_H": "地平/方位",
+      "houses_system_I": "日照",
+      "houses_system_i": "日照/高度",
+      "houses_system_K": "科赫",
+      "houses_system_L": "普倫 SD",
+      "houses_system_M": "莫里努斯",
+      "houses_system_N": "等宮/1=白羊",
+      "houses_system_O": "波菲里",
+      "houses_system_P": "普拉西達斯",
+      "houses_system_Q": "普倫 SR",
+      "houses_system_R": "雷焦蒙塔努斯",
+      "houses_system_S": "斯里帕蒂",
+      "houses_system_T": "波利奇/佩奇",
+      "houses_system_U": "克魯辛斯基-比薩-戈爾澤",
+      "houses_system_V": "等宮/韋洛",
+      "houses_system_W": "等宮/整體星座",
+      "houses_system_X": "軸向旋轉系統/子午線宮",
+      "houses_system_Y": "APC宮位",
       "celestial_points": {
         "Sun": "太陽",
         "Moon": "月亮",
@@ -373,6 +493,30 @@
       "waning_gibbous": "Luna Gibosa Menguante",
       "last_quarter": "Cuarto Menguante",
       "waning_crescent": "Luna Menguante",
+      "houses": "Casas",
+      "houses_system_A": "Iguales",
+      "houses_system_B": "Alcabicio",
+      "houses_system_C": "Campanus",
+      "houses_system_D": "Iguales (MC)",
+      "houses_system_F": "Carter poli-equ.",
+      "houses_system_H": "Horizonte/Azimut",
+      "houses_system_I": "Sunshine",
+      "houses_system_i": "Sunshine/alt.",
+      "houses_system_K": "Koch",
+      "houses_system_L": "Pullen SD",
+      "houses_system_M": "Morinus",
+      "houses_system_N": "Iguales/1=Aries",
+      "houses_system_O": "Porfirio",
+      "houses_system_P": "Placidus",
+      "houses_system_Q": "Pullen SR",
+      "houses_system_R": "Regiomontanus",
+      "houses_system_S": "Sripati",
+      "houses_system_T": "Polich/Page",
+      "houses_system_U": "Krusinski-Pisa-Goelzer",
+      "houses_system_V": "Iguales/Vehlow",
+      "houses_system_W": "Iguales/Signo completo",
+      "houses_system_X": "Sistema de rotación axial/Casas meridianas",
+      "houses_system_Y": "Casas APC",
       "celestial_points": {
         "Sun": "Sol",
         "Moon": "Luna",
@@ -439,6 +583,30 @@
       "waning_gibbous": "Убывающая Луна",
       "last_quarter": "Последняя Четверть",
       "waning_crescent": "Убывающий Серп",
+      "houses": "Дома",
+      "houses_system_A": "Равные",
+      "houses_system_B": "Алькабитиус",
+      "houses_system_C": "Кампанус",
+      "houses_system_D": "Равные (MC)",
+      "houses_system_F": "Картер поли-экв.",
+      "houses_system_H": "Горизонт/Азимут",
+      "houses_system_I": "Саншайн",
+      "houses_system_i": "Саншайн/альт.",
+      "houses_system_K": "Кох",
+      "houses_system_L": "Пуллен SD",
+      "houses_system_M": "Моринус",
+      "houses_system_N": "Равные/1=Овен",
+      "houses_system_O": "Порфирий",
+      "houses_system_P": "Плацидус",
+      "houses_system_Q": "Пуллен SR",
+      "houses_system_R": "Региомонтанус",
+      "houses_system_S": "Шрипати",
+      "houses_system_T": "Полич/Пейдж",
+      "houses_system_U": "Крусински-Пиза-Гольцер",
+      "houses_system_V": "Равные/Велоу",
+      "houses_system_W": "Равные/Целый знак",
+      "houses_system_X": "Осевая система вращения/Меридианные дома",
+      "houses_system_Y": "Дома APC",
       "celestial_points": {
         "Sun": "Солнце",
         "Moon": "Луна",
@@ -505,6 +673,30 @@
       "waning_gibbous": "Küçülen Şişkin Ay",
       "last_quarter": "Son Dördün",
       "waning_crescent": "Küçülen Hilal",
+      "houses": "Evler",
+      "houses_system_A": "Eşit",
+      "houses_system_B": "Alkabisyus",
+      "houses_system_C": "Kampanus",
+      "houses_system_D": "Eşit (MC)",
+      "houses_system_F": "Carter poli-equ.",
+      "houses_system_H": "Ufuk/Azimut",
+      "houses_system_I": "Sunshine",
+      "houses_system_i": "Sunshine/alt.",
+      "houses_system_K": "Koch",
+      "houses_system_L": "Pullen SD",
+      "houses_system_M": "Morinus",
+      "houses_system_N": "Eşit/1=Koç",
+      "houses_system_O": "Porfiryus",
+      "houses_system_P": "Placidus",
+      "houses_system_Q": "Pullen SR",
+      "houses_system_R": "Regiomontanus",
+      "houses_system_S": "Sripati",
+      "houses_system_T": "Polich/Page",
+      "houses_system_U": "Krusinski-Pisa-Goelzer",
+      "houses_system_V": "Eşit/Vehlow",
+      "houses_system_W": "Eşit/Tam burç",
+      "houses_system_X": "Eksenel dönüş sistemi/Meridyen evleri",
+      "houses_system_Y": "APC evleri",
       "celestial_points": {
         "Sun": "Güneş",
         "Moon": "Ay",
@@ -571,6 +763,30 @@
       "waning_gibbous": "Abnehmender Mond",
       "last_quarter": "Letztes Viertel",
       "waning_crescent": "Abnehmende Sichel",
+      "houses": "Häuser",
+      "houses_system_A": "Gleich",
+      "houses_system_B": "Alcabitius",
+      "houses_system_C": "Campanus",
+      "houses_system_D": "Gleich (MC)",
+      "houses_system_F": "Carter poli-äqu.",
+      "houses_system_H": "Horizont/Azimut",
+      "houses_system_I": "Sunshine",
+      "houses_system_i": "Sunshine/alt.",
+      "houses_system_K": "Koch",
+      "houses_system_L": "Pullen SD",
+      "houses_system_M": "Morinus",
+      "houses_system_N": "Gleich/1=Widder",
+      "houses_system_O": "Porphyrius",
+      "houses_system_P": "Placidus",
+      "houses_system_Q": "Pullen SR",
+      "houses_system_R": "Regiomontanus",
+      "houses_system_S": "Sripati",
+      "houses_system_T": "Polich/Page",
+      "houses_system_U": "Krusinski-Pisa-Goelzer",
+      "houses_system_V": "Gleich/Vehlow",
+      "houses_system_W": "Gleich/Ganzes Zeichen",
+      "houses_system_X": "Axiales Rotationssystem/Meridianhäuser",
+      "houses_system_Y": "APC Häuser",
       "celestial_points": {
         "Sun": "Sonne",
         "Moon": "Mond",
@@ -637,6 +853,30 @@
       "waning_gibbous": "कृष्ण पक्ष त्रयोदशी",
       "last_quarter": "कृष्ण पक्ष सप्तमी",
       "waning_crescent": "कृष्ण पक्ष प्रथमा",
+      "houses": "भावों",
+      "houses_system_A": "समान",
+      "houses_system_B": "अल्काबितियस",
+      "houses_system_C": "कैम्पानस",
+      "houses_system_D": "समान (MC)",
+      "houses_system_F": "कार्टर बहु-सम",
+      "houses_system_H": "क्षितिज/अज़ीमुथ",
+      "houses_system_I": "सनशाइन",
+      "houses_system_i": "सनशाइन/वैकल्पिक",
+      "houses_system_K": "कोच",
+      "houses_system_L": "पुल्लेन SD",
+      "houses_system_M": "मोरिनस",
+      "houses_system_N": "समान/1=मेष",
+      "houses_system_O": "पोरफिरी",
+      "houses_system_P": "प्लासिडस",
+      "houses_system_Q": "पुल्लेन SR",
+      "houses_system_R": "रेजियोमोंटेनस",
+      "houses_system_S": "श्रीपति",
+      "houses_system_T": "पोलिच/पेज",
+      "houses_system_U": "क्रुसिंस्की-पिसा-गोल्ज़र",
+      "houses_system_V": "समान/वेहलो",
+      "houses_system_W": "समान/पूर्ण राशि",
+      "houses_system_X": "धुरी घूर्णन प्रणाली/मेरिडियन भाव",
+      "houses_system_Y": "APC भाव",
       "celestial_points": {
         "Sun": "सूर्य",
         "Moon": "चंद्रमा",
@@ -735,7 +975,9 @@
       "name": "Sun",
       "color": "var(--kerykeion-chart-color-sun)",
       "element_points": 40,
-      "related_zodiac_signs": ["4"],
+      "related_zodiac_signs": [
+        "4"
+      ],
       "label": "Sun"
     },
     {
@@ -743,7 +985,9 @@
       "name": "Moon",
       "color": "var(--kerykeion-chart-color-moon)",
       "element_points": 40,
-      "related_zodiac_signs": ["3"],
+      "related_zodiac_signs": [
+        "3"
+      ],
       "label": "Moon"
     },
     {
@@ -751,7 +995,10 @@
       "name": "Mercury",
       "color": "var(--kerykeion-chart-color-mercury)",
       "element_points": 15,
-      "related_zodiac_signs": ["2", "5"],
+      "related_zodiac_signs": [
+        "2",
+        "5"
+      ],
       "label": "Mercury"
     },
     {
@@ -759,7 +1006,10 @@
       "name": "Venus",
       "color": "var(--kerykeion-chart-color-venus)",
       "element_points": 15,
-      "related_zodiac_signs": ["1", "6"],
+      "related_zodiac_signs": [
+        "1",
+        "6"
+      ],
       "label": "Venus"
     },
     {
@@ -767,7 +1017,9 @@
       "name": "Mars",
       "color": "var(--kerykeion-chart-color-mars)",
       "element_points": 15,
-      "related_zodiac_signs": ["0"],
+      "related_zodiac_signs": [
+        "0"
+      ],
       "label": "Mars"
     },
     {
@@ -775,7 +1027,9 @@
       "name": "Jupiter",
       "color": "var(--kerykeion-chart-color-jupiter)",
       "element_points": 10,
-      "related_zodiac_signs": ["8"],
+      "related_zodiac_signs": [
+        "8"
+      ],
       "label": "Jupiter"
     },
     {
@@ -783,7 +1037,9 @@
       "name": "Saturn",
       "color": "var(--kerykeion-chart-color-saturn)",
       "element_points": 10,
-      "related_zodiac_signs": ["9"],
+      "related_zodiac_signs": [
+        "9"
+      ],
       "label": "Saturn"
     },
     {
@@ -791,7 +1047,9 @@
       "name": "Uranus",
       "color": "var(--kerykeion-chart-color-uranus)",
       "element_points": 10,
-      "related_zodiac_signs": ["10"],
+      "related_zodiac_signs": [
+        "10"
+      ],
       "label": "Uranus"
     },
     {
@@ -799,7 +1057,9 @@
       "name": "Neptune",
       "color": "var(--kerykeion-chart-color-neptune)",
       "element_points": 10,
-      "related_zodiac_signs": ["11"],
+      "related_zodiac_signs": [
+        "11"
+      ],
       "label": "Neptune"
     },
     {
@@ -807,7 +1067,9 @@
       "name": "Pluto",
       "color": "var(--kerykeion-chart-color-pluto)",
       "element_points": 10,
-      "related_zodiac_signs": ["7"],
+      "related_zodiac_signs": [
+        "7"
+      ],
       "label": "Pluto"
     },
     {
@@ -891,7 +1153,6 @@
       "label": "True_South_Node"
     }
   ],
-
   "chart_colors": {
     "paper_0": "var(--kerykeion-chart-color-paper-0)",
     "paper_1": "var(--kerykeion-chart-color-paper-1)",
